tests/chapter_15/valid/subscripting/long_subscript.c
int main(void) {
    int arr[4] = {1, 2, 3, 4};
    return arr[2l];
}