tests/chapter_15/invalid_types/cast_to_array_type_3.c
int main(void)
{
    long arr[6];
    return ((long(([2])[3]))arr);
}